--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,7 +63,7 @@
                                 <label><input type="radio" name="api_provider" value="openai"> OpenAI</label>
                                 <label><input type="radio" name="api_provider" value="gemini"> Gemini</label>
                                 {% if use_local_llm %}
-                                <label><input type="radio" name="api_provider" value="local"> Local</label>
+                                <label><input type="radio" name="api_provider" value="local"> Локальный</label>
                                 {% endif %}
                             </div>
                         </div>
